temporary fix for the illegible table properties

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -43,4 +43,9 @@ input {
         background-color: grey;
         color: white;
       }
+
+      td,
+      th {
+        color: white;
+      }
 }
